force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Payment_Calculation_Basis__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Payment_Calculation_Basis__c</fullName>
    <description>Administrators populate this optional picklist field to identify the payment calculation basis of the loan, including the flat amount, the percent of principal, and percent of outstanding. By default, it is blank.</description>
    <inlineHelpText>Administrators populate this optional picklist field to identify the payment calculation basis of the loan, including the flat amount, the percent of principal, and percent of outstanding. By default, it is blank.</inlineHelpText>
    <label>Payment Calculation Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flat Amount</fullName>
            </value>
            <value>
                <fullName>Percent of Principal</fullName>
            </value>
            <value>
                <fullName>Percent of Outstanding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>