force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Periodic_Change_Limit_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Periodic_Change_Limit_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. If enabled, there is a limit to the amount that a variable rate can change over successive specified periods. If disabled, this field is not used. By default, it is disabled.</description>
    <inlineHelpText>If true there is a limit to the amount that a variable rate can change over successive specified periods.</inlineHelpText>
    <label>Periodic Change Limit Indicator</label>
    <type>Checkbox</type>
</CustomField>