force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Permanent_Rate_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Permanent_Rate_Effective_Date__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It is the day on which the regular interest rate takes effect on a variable rate account having a different/special initial or promotional rate (for example, the date corresponding to the day after expiration of initial rate period for the specified account).</description>
    <inlineHelpText>The day on which the regular interest rate takes effect on a variable rate account having a different/special initial or promotional rate (i.e. the date corresponding to the day after expiration of initial rate period for the specified account).</inlineHelpText>
    <label>Permanent Rate Effective Date</label>
    <type>Date</type>
</CustomField>