force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Prepayment_Penalty_Applicable__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Prepayment_Penalty_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional checkbox field to indicate applicable prepayment penalties for a product. By default, it is false.</description>
    <inlineHelpText>Select whether prepayment penalties are possible for the products associated with this product feature.</inlineHelpText>
    <label>Prepayment Penalty is Applicable</label>
    <type>Checkbox</type>
</CustomField>