force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Projected_Draw_Schedule_Enabled__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Projected_Draw_Schedule_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admins select this boolean field if the system should display the projected draw schedule experience. By default, it is not selected.</description>
    <label>Projected Draw Schedule Enabled</label>
    <type>Checkbox</type>
</CustomField>