force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Rate_Change_Percent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate_Change_Percent__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It is the amount by which a variable rate may change within the specified term.</description>
    <inlineHelpText>The amount by which a variable rate may change within the specified term.</inlineHelpText>
    <label>Rate Change Percent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>