force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Rate_Maximum__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate_Maximum__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the highest interest rate that can apply to the account.</description>
    <inlineHelpText>The highest interest rate that can apply to the account.</inlineHelpText>
    <label>Rate Maximum</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>