force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Rate_Maximum_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate_Maximum_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. If enabled, a rate ceiling applies on the account. If disabled, this field is not used. By default, it is disabled.</description>
    <inlineHelpText>If true a rate ceiling applies on the account.</inlineHelpText>
    <label>Rate Maximum Indicator</label>
    <type>Checkbox</type>
</CustomField>