force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate_Type__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the rate type that will apply to the account.</description>
    <inlineHelpText>Specifies the rate type that will apply to the account.</inlineHelpText>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Tier A</fullName>
            </value>
            <value>
                <fullName>Tier B</fullName>
            </value>
            <value>
                <fullName>Stepped</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>