force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Reg_Capital_Allocation_CET__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Reg_Capital_Allocation_CET__c</fullName>
    <description>This field is a percent of loan amount that is to be held by the Financial Institution in common equity tier 1.</description>
    <label>Regulatory Capital Allocation (CET1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>