force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Renewal_Interest_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Renewal_Interest_Rate_Type__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the interest rate at which the account will be renewed.</description>
    <inlineHelpText>Specifies the interest rate at which the account will be renewed.</inlineHelpText>
    <label>Renewal Interest Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same Basis</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>