force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Set_Contingent_Percent_to_100__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Set_Contingent_Percent_to_100__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Administrators select this optional boolean field to tell the system that the Set Contingent Percentage to 100% system property should fire for the specific Product Feature. By default, it is true.</description>
    <inlineHelpText>Select this checkbox to tell the system that the Set Contingent Percentage to 100% system property should fire for the specific Product Feature.</inlineHelpText>
    <label>Set Contingent Percentage to 100%</label>
    <type>Checkbox</type>
</CustomField>