force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Stair_Step_Down__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Stair_Step_Down__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The administrator populates this optional field where a value of True indicates the interest rate is allowed to decrease below the teaser rate over the term of the loan and a value of False indicates the interest rate cannot decrease below the teaser rate.</description>
    <inlineHelpText>This field is checked when the interest rate is allowed to decrease below the teaser rate over the term of the loan and unchecked when the interest rate cannot decrease below the teaser rate.</inlineHelpText>
    <label>Stair Step Down</label>
    <type>Checkbox</type>
</CustomField>