force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Subline_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Subline_Type__c</fullName>
    <description>This picklist is used to indicate a product feature that specifies the subline type of a note.</description>
    <inlineHelpText>Specifies the subline type of a note.</inlineHelpText>
    <label>Subline Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equipment Acquisition</fullName>
            </value>
            <value>
                <fullName>Asset Acquisition</fullName>
            </value>
            <value>
                <fullName>Term Loans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>