force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Tiered_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Tiered_Interest_Rate__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It designates the interest rate that applies to the corresponding tier.</description>
    <inlineHelpText>The interest rate that applies to the corresponding tier.</inlineHelpText>
    <label>Tiered Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>