force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Tiered_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Tiered_Margin_Percent__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the percentage that is added to (or subtracted from) the index to determine the applicable rate for a given account tier with variable rate tiers. If the margin will be subtracted from the index, this value would be negative. If the margin will be added to the index this value will be positive.</description>
    <inlineHelpText>The percentage that is added to (or subtracted from) the index to determine the applicable rate for a given account tier with variable rate tiers.</inlineHelpText>
    <label>Tiered Margin Percent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>